ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/175_uninitialized_const_variable.sol
contract Foo {
    u256 constant y;
}
// ----
// TypeError 4266: (19-34): Uninitialized "constant" variable.
